--- a/click-debounce-sample/src/main/res/layout/activity_main.xml
+++ b/click-debounce-sample/src/main/res/layout/activity_main.xml
@@ -25,4 +25,13 @@
     android:padding="20dp"
     android:text="button2" />
 
+  <Button
+    android:id="@+id/button3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:background="@android:color/holo_orange_light"
+    android:padding="20dp"
+    android:text="button3" />
+
 </LinearLayout>
